<resources>
    <string name="app_name">RealHeart</string>
    <string name="slogan">In service of Humanity </string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="startDate">Start Date</string>
    <string name="startTime">Start Time</string>
    <string name="selectDAte">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="shedule">Shedule</string>
    <string name="duration">Duration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
</resources>
